--- a/css/style.css
+++ b/css/style.css
@@ -277,3 +277,21 @@ img.appicon-settings {
 .title {
   font-size: 1.5em;
 }
+
+.subtitle {
+  font-size: 0.9rem;
+  opacity: 0.7;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.chip.song > img {
+  height: 128px;
+  object-fit: contain;
+}
+
+#current-song-art {
+  height: 200px;
+}
