--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,10 @@ body {
   color: #f1f1f1;
 
   min-height: 100vh;
-  min-width: 100vw;
+  min-width: 100%;
 
   margin: 0;
-  padding: 0;
+  padding: 0 0 100px 0;
 }
 
 * {
@@ -103,7 +103,10 @@ nav {
   bottom: 0;
   left: 0;
 
-  background: var(--gray-9-70);
+  background: url('../img/noise.png'), var(--gray-9-70);
+  -webkit-backdrop-filter: blur(40px);
+  backdrop-filter: blur(40px);
+  background-repeat: repeat;
   color: white;
 
   align-items: center;
@@ -266,6 +269,24 @@ input[type=text], input[type=url] {
   flex: 1;
 }
 
+.fw {
+  width: 100%;
+}
+
+.fh {
+  height: 100%;
+}
+
+.hw {
+  width: 50%;
+}
+
+img.fw {
+  width: 50%;
+  max-width: 25vw;
+  object-fit: contain;
+}
+
 img.rounded {
   border-radius: 1rem;
 }
@@ -281,10 +302,23 @@ img.appicon-settings {
 .subtitle {
   font-size: 0.9rem;
   opacity: 0.7;
+  z-index: -1;
 }
 
 .justify-center {
   justify-content: center;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.align-space-between {
+  justify-content: space-between;
+}
+
+.text-align-center {
+  text-align: center;
 }
 
 .chip.song > img {
@@ -294,4 +328,31 @@ img.appicon-settings {
 
 #current-song-art {
   height: 200px;
+}
+
+#next-song-art {
+  height: 180px;
+}
+
+#fullscreen {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  z-index: 100;
+
+  background: var(--gray-9);
+
+  margin: 0;
+  padding: 1rem;
+  width: 100%;
+  height: 100%;
+
+}
+
+@media (prefers-color-scheme: light) {
+  input[type=text], input[type=url] {
+    background: var(--gray-1);
+    color: var(--gray-9);
+  }
 }
